{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 3,
  "lineage": "740405e9-7588-84f2-a79a-4032800cfeda",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:security-group/sg-f8e94e9d",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-f8e94e9d",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-3c1bbe57"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:security-group/sg-03c45345ad0bc1807",
            "description": "Allow SSH port from all",
            "egress": [],
            "id": "sg-03c45345ad0bc1807",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_from_all",
            "name_prefix": "",
            "owner_id": "367921556108",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-3c1bbe57"
          }
        }
      ]
    }
  ]
}